--- a/src/performance/estimation/tool/FXMLDocument.fxml
+++ b/src/performance/estimation/tool/FXMLDocument.fxml
@@ -15,20 +15,20 @@
       <TextField fx:id="gt_path_text" disable="true" editable="false" layoutX="134.0" layoutY="10.0" prefHeight="15.0" prefWidth="409.0" />
       <TextField fx:id="do_path_text" disable="true" editable="false" layoutX="134.0" layoutY="40.0" prefHeight="23.0" prefWidth="409.0" />
       <TextField fx:id="fm_path_text" disable="true" editable="false" layoutX="134.0" layoutY="70.0" prefHeight="23.0" prefWidth="409.0" />
-      <Button fx:id="gt_path" layoutX="543.0" layoutY="10.0" mnemonicParsing="false" onAction="#GroundTruthPathButtonAction" text="..." />
-      <Button fx:id="do_path" layoutX="543.0" layoutY="40.0" mnemonicParsing="false" onAction="#DetectedOutputPathButtonAction" text="..." />
-      <Button fx:id="fm_path" layoutX="543.0" layoutY="70.0" mnemonicParsing="false" onAction="#FrameFolderPathButtonAction" text="..." />
-      <Button fx:id="setup" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#SetupButtonAction" prefHeight="83.0" prefWidth="69.0" text="Setup" />
+      <Button fx:id="gt_path_btn" layoutX="543.0" layoutY="10.0" mnemonicParsing="false" onAction="#GroundTruthPathButtonAction" text="..." />
+      <Button fx:id="do_path_btn" layoutX="543.0" layoutY="40.0" mnemonicParsing="false" onAction="#DetectedOutputPathButtonAction" text="..." />
+      <Button fx:id="frame_path_btn" layoutX="543.0" layoutY="70.0" mnemonicParsing="false" onAction="#FrameFolderPathButtonAction" text="..." />
+      <Button fx:id="setup_btn" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#SetupButtonAction" prefHeight="83.0" prefWidth="69.0" text="Setup" />
       <Label layoutX="702.0" layoutY="25.0" text="Label:" />
       <Label layoutX="702.0" layoutY="45.0" text="Ground Truth" textFill="RED" />
       <Label layoutX="702.0" layoutY="63.0" text="Detected Object" textFill="#109c10" />
       <ImageView fx:id="canvas" fitHeight="319.0" fitWidth="559.0" layoutX="134.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField layoutX="317.0" layoutY="136.0" onKeyReleased="#FastForwardKeyReleased" />
-      <Button fx:id="fast_go" layoutX="476.0" layoutY="136.0" mnemonicParsing="false" onAction="#FastForwardButtonAction" text="&gt;" />
-      <Button fx:id="fnext" layoutX="741.0" layoutY="332.0" mnemonicParsing="false" onAction="#NextFrameButtonAction" text="&gt;&gt;" />
-      <Button fx:id="fback" layoutX="53.0" layoutY="332.0" mnemonicParsing="false" onAction="#PreviousFrameButtonAction" text="&lt;&lt;" />
-      <Button fx:id="tback" layoutX="334.0" layoutY="532.0" mnemonicParsing="false" onAction="#PreviousTroubleButtonAction" text="&lt;&lt;" />
-      <Button fx:id="tnext" layoutX="459.0" layoutY="532.0" mnemonicParsing="false" onAction="#NextTroubleButtonAction" text="&gt;&gt;" />
+      <TextField fx:id="fast_go_text" layoutX="317.0" layoutY="136.0" onKeyReleased="#FastForwardKeyReleased" />
+      <Button fx:id="fast_go_btn" layoutX="476.0" layoutY="136.0" mnemonicParsing="false" onAction="#FastForwardButtonAction" text="&gt;" />
+      <Button fx:id="frame_next_btn" layoutX="741.0" layoutY="332.0" mnemonicParsing="false" onAction="#NextFrameButtonAction" text="&gt;&gt;" />
+      <Button fx:id="frame_back_btn" layoutX="53.0" layoutY="332.0" mnemonicParsing="false" onAction="#PreviousFrameButtonAction" text="&lt;&lt;" />
+      <Button fx:id="trouble_back_btn" layoutX="334.0" layoutY="532.0" mnemonicParsing="false" onAction="#PreviousTroubleButtonAction" text="&lt;&lt;" />
+      <Button fx:id="trouble_next_btn" layoutX="459.0" layoutY="532.0" mnemonicParsing="false" onAction="#NextTroubleButtonAction" text="&gt;&gt;" />
       <Label layoutX="392.0" layoutY="536.0" text="Trouble" />
       <TextArea fx:id="ratio_table" disable="true" editable="false" layoutX="30.0" layoutY="572.0" prefHeight="136.0" prefWidth="767.0" />
    </children>
